<resources>
    <string name="app_name">NHAK APP</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="str_login">Login</string>
    <string name="no_internet_connectivity">No Internet</string>
    <string name="link_not_found">Link Not Found</string>
    <string name="access_denied">Access Denied</string>
    <string name="session_expired">Session Expired</string>
    <string name="server_error">Server Error\n</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="internal_error">We\'ve encountered an internal error!</string>
    <string name="conflict_response">Conflict response</string>
    <string name="error_timeout">Request timed out!</string>
    <string name="payload_too_large">This file is too large. Please select a smaller one.</string>
    <string name="unauthorized_error">Unauthorised!</string>
    <string name="bad_request">Bad Request!</string>
    <string name="invalid_credentials">The email/mobile number and password provided do not match an account in our system. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="facebook_app_id">""</string>
    <string name="fb_login_protocol_scheme">""</string>
    <string name="check_internet_connection">No internet</string>
    <string name="no_more_load_retry">No data</string>
    <string name="str_sale_out">Sale (OUT)</string>
    <string name="str_sale_return_it">Sale Return (IN)</string>
    <string name="str_click_image">Click Image</string>
    <string name="str_go_to_cart">Go to cart</string>
    <string name="str_back">Back</string>
    <string name="str_checkout">Checkout</string>
    <string name="str_order_summary">Order Summary</string>
    <string name="str_price">Price</string>
    <string name="str_qty">Qty</string>
    <string name="str_size">Size</string>
    <string name="str_color">Color</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure want to logout?</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="product_added_to_cart">Product added to the cart.</string>
    <string name="str_rescan">Re-Scan</string>
    <string name="address_and_print_name">Address and Print Name</string>
    <string name="sell_out_history">Sell Out History</string>
    <string name="sell_in_history">Sell In History</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="sell_in_out_history">Sell In/Out History</string>
    <string name="str_amount">Amount</string>
    <string name="str_item_amount">Item Amount</string>
    <string name="str_discount">Discount</string>
    <string name="str_total_amount">Total Amount</string>
    <string name="str_name">Name</string>
    <string name="str_sell_out_summary">Sale Out Summary</string>
    <string name="str_print">Print</string>
    <string name="str_cart">Cart</string>
    <string name="item_name">Item Name</string>
    <string name="added_to_cart">Add to cart</string>
    <string name="str_addmore">Add More</string>
    <string name="str_sale_in">Sale In</string>
    <string name="str_sell_in_summary">Sale In Summary</string>
    <string name="daily_summary">Daily Summary</string>
    <string name="stock_summary">Stock Summary</string>
    <string name="enter_stock_quantity">Please enter quantity</string>
    <string name="str_done">Done</string>
    <string name="str_edit_quantity">Edit Quantity</string>
    <string name="str_cancel">Cancel</string>
    <string name="enter_proper_stock_quantity">Please enter proper stock quantity</string>
    <string name="enter_base_url">Enter Url</string>
    <string name="str_download">Download Summary</string>
    <string name="str_summary_report">Total Stock Summary: </string>
    <string name="str_date_summary_report">Choose Date for the Summary:</string>
    <string name="str_select_date">Choose Date</string>
    <string name="str_total_qty">Total Quantity: </string>
    <string name="downloading">Downloading...</string>
</resources>