<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:src="@drawable/app_icon"
        android:layout_marginTop="@dimen/margin_medium_xxxx"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/bg_rounded_edit_text"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="26dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_40_opacity"
        android:textSize="@dimen/text_size_normal_xxxx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/bg_rounded_edit_text"
        android:hint="@string/enter_password"
        android:inputType="textWebPassword"
        android:maxLines="1"
        android:paddingHorizontal="26dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_40_opacity"
        android:textSize="@dimen/text_size_normal_xxxx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUsername" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtBaseUrl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/bg_rounded_edit_text"
        android:hint="@string/enter_base_url"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="26dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_40_opacity"
        android:textSize="@dimen/text_size_normal_xxxx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="@dimen/margin_large_xxxx"
        android:background="@drawable/bg_btn_fill_rounded"
        android:letterSpacing="0.3"
        android:text="@string/str_login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal_xxx"
        android:textStyle="bold"
        app:backgroundTint="@color/color_fill_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtBaseUrl" />
</androidx.constraintlayout.widget.ConstraintLayout>