<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_normal_xxx"
    android:background="@drawable/dialog_edit__bg"
    android:padding="@dimen/margin_normal"
    android:backgroundTint="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/str_edit_quantity"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium_xx"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Item Named erferfer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtStockName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="@dimen/margin_medium_xxxx"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal_xx"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDialogTitle"
        tools:text="Item Named erferfer" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtStockQuantity"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/bg_rounded_edit_text"
        android:hint="@string/enter_stock_quantity"
        android:inputType="number"
        android:maxLines="1"
        android:lines="1"
        android:paddingHorizontal="26dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black_40_opacity"
        android:textSize="@dimen/text_size_normal_xxxx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtStockName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="@dimen/margin_large_xxxx"
        android:background="@drawable/bg_btn_fill_rounded"
        android:letterSpacing="0.3"
        android:paddingHorizontal="@dimen/margin_small_xxx"
        android:text="@string/str_done"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal_xxx"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:backgroundTint="@color/color_fill_button"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/edtStockQuantity" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="@dimen/margin_large_xxxx"
        android:background="@drawable/bg_btn_fill_rounded"
        android:letterSpacing="0.3"
        android:paddingHorizontal="@dimen/margin_small_xxx"
        android:text="@string/str_cancel"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_normal_xxx"
        android:textStyle="bold"
        app:backgroundTint="@color/color_fill_button"
        app:layout_constraintEnd_toStartOf="@id/btnDone"
        app:layout_constraintTop_toBottomOf="@id/edtStockQuantity" />
</androidx.constraintlayout.widget.ConstraintLayout>