<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--    <include
            android:id="@+id/toolbar_home"
            layout="@layout/action_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtOrderSummaryLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/str_order_summary"
            android:textAllCaps="false"
            android:textColor="@color/gray_title"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtOrderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:textAllCaps="false"
            android:textColor="@color/gray_title"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/txtOrderId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtOrderId"
            app:layout_constraintTop_toTopOf="@id/txtOrderId"
            tools:text="Jan 19,2024" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtOrderId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:textAllCaps="false"
            android:textColor="@color/gray_title"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/txtOrderDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtOrderSummaryLabel"
            tools:text="Order #21423" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linHeaderTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/bg_color_summary_item"
            android:orientation="horizontal"
            android:padding="4dp"
            android:paddingVertical="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtOrderId">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtStockName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.28"
                android:gravity="center_vertical"
                android:text="@string/str_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtStockColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.10"
                android:gravity="center_vertical"
                android:text="@string/str_color"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtStockSize"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.10"
                android:gravity="center_vertical"
                android:text="@string/str_size"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtStockQty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.17"
                android:gravity="center_vertical"
                android:text="@string/str_qty"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtStockQtyMrp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:gravity="center_vertical"
                android:lines="1"
                android:paddingEnd="4dp"
                android:text="@string/str_price"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtStockPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.23"
                android:gravity="center_vertical"
                android:text="@string/str_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/txtDeleteButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.07"
                android:src="@drawable/ic_delete_item"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_delete_item" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListOfStock"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/linHFooterTable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linHeaderTable"
            tools:itemCount="6"
            tools:listitem="@layout/adapter_cart_summary_item_layout" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linHFooterTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"
            android:background="@color/bg_color_summary_item"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:paddingVertical="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvListOfStock">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTotalQtyName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:gravity="center_vertical"
                android:text="@string/str_total_qty"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTotalQtyValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.28"
                android:gravity="center_vertical"
                tools:text="@string/str_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal_xx"
            android:background="@color/bg_color_summary_item"
            android:padding="@dimen/margin_normal_xxxx"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtItemAmountLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/str_item_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/txtItemAmountValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtItemAmountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="normal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/txtItemAmountLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtItemAmountLabel"
                app:layout_constraintTop_toTopOf="@id/txtItemAmountLabel"
                tools:text="Rs. 123" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDiscountLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/str_discount"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/txtItemAmountValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtItemAmountLabel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDiscountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="normal"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/txtDiscountLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtDiscountLabel"
                app:layout_constraintTop_toTopOf="@id/txtDiscountLabel"
                tools:text="Rs. 123" />

            <View
                android:id="@+id/viewDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_small_xxxx"
                android:alpha="0.2"
                android:background="@color/gray_title"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDiscountLabel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTotalAmountLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/str_total_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txtTotalAmountValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewDivider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtTotalAmountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal_xxx"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/txtTotalAmountLabel"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintTop_toTopOf="@id/txtTotalAmountLabel"
                tools:text="Rs. 123" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/bg_btn_fill_rounded"
            android:letterSpacing="0.3"
            android:text="@string/str_back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal_xx"
            android:textStyle="bold"
            app:backgroundTint="@color/color_fill_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddMore"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/bg_btn_fill_rounded"
            android:letterSpacing="0.3"
            android:paddingHorizontal="@dimen/margin_normal"
            android:text="@string/str_addmore"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal_xx"
            android:textStyle="bold"
            app:backgroundTint="@color/color_fill_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCheckout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn_fill_rounded"
            android:letterSpacing="0.3"
            android:paddingHorizontal="@dimen/margin_normal"
            android:text="@string/str_checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal_xx"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="@color/color_fill_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnAddMore"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPrint"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/bg_btn_fill_rounded"
            android:letterSpacing="0.3"
            android:paddingHorizontal="@dimen/margin_normal"
            android:text="@string/str_print"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            android:visibility="gone"
            app:backgroundTint="@color/color_fill_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>